# AstraBot

./: .gitignore  README.md  TECH_SPEC.md  app.py  docker-compose.yaml  pyproject.toml  secrets.toml.example  settings.toml
I18N/locales/en/LC_MESSAGES/: txt.ftl
I18N/locales/ru/LC_MESSAGES/: txt.ftl
bot/: __main__.py  config.py
bot/handling/: schema.py
bot/handling/dialogs/: __init__.py  watermark.py
bot/handling/dialogs/admin/: dialog.py  getters.py  handlers.py
bot/handling/dialogs/horoscope/: dialog.py  getters.py  handlers.py
bot/handling/dialogs/main_menu/: __init__.py  dialog.py  getters.py
bot/handling/dialogs/profile/: dialog.py  getters.py  handlers.py
bot/handling/dialogs/referral/: dialog.py  getters.py  handlers.py
bot/handling/filters/: is_admin.py
bot/handling/handlers/: __init__.py  admin.py  get_user.py  my_chat_member.py  start.py
bot/handling/middlewares/: __init__.py  translator.py  user_sub.py  user_sync.py
bot/handling/states/: __init__.py  admin.py  horoscope.py  main_menu.py  profile.py  referral.py
bot/services/: horoscope.py  premium.py  zodiac.py
bot/widgets/: localized_calendar.py
database/config/: common.py
database/migration/: env.py
database/migration/versions/: 4cddc999e547_init.py
database/models/: __init__.py  models.py
logs/: config.py
