[tool.poetry]
name = "astra_bot"
version = "0.1.0"
description = "Изотерический телеграм боте предоставляющий услуги не материального характера"
authors = ["Artur"]
license = "Proprietary"
readme = "README.md"
packages = [{include = "astra_bot"}]

[tool.poetry.dependencies]
python = "^3.12"
dynaconf = "^3.2.12"
fluentogram = "^1.2.1"
pathvalidate = "^3.3.1"
greenlet = "^3.2.4"
alembic = "^1.17.1"
aiogram = "^3.22.0"
structlog = "^25.5.0"
nats-py = "^2.12.0"
aiogram-dialog = "2.4.0"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.44"
pyrate-limiter = "^3.9.0"
pyinstrument = "^5.1.1"
orjson = "^3.11.4"
rich = "^14.2.0"
faststream = "^0.5.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
